feat: Add core WYSIWYG TRPG writing application with document management, preferences, and content import.

--- a/index.html
+++ b/index.html
@@ -192,13 +192,18 @@
               class="material-symbols-rounded">sticky_note_2</span><span class="toolbar-label">提示框</span></button>
           <button class="toolbar-btn" data-action="warning" title="警告框"><span
               class="material-symbols-rounded">warning</span><span class="toolbar-label">警告框</span></button>
-          <button class="toolbar-btn" data-action="stat-block" title="怪物属性块"><span
+          <button class="toolbar-btn" data-action="stat-block" title="怪物属性块(D&D)"><span
               class="material-symbols-rounded">pets</span><span class="toolbar-label">属性块</span></button>
-          <button class="toolbar-btn" data-action="spell" title="法术卡片"><span
+          <button class="toolbar-btn" data-action="coc-stat" title="怪物属性块(COC)"><span
+              class="material-symbols-rounded">psychology</span><span class="toolbar-label">COC怪物</span></button>
+          <button class="toolbar-btn" data-action="spell" title="法术卡片(D&D)"><span
               class="material-symbols-rounded">auto_fix_high</span><span class="toolbar-label">法术卡</span></button>
+          <button class="toolbar-btn" data-action="coc-spell" title="法术卡片(COC)"><span
+              class="material-symbols-rounded">menu_book</span><span class="toolbar-label">COC法术</span></button>
           <button class="toolbar-btn" data-action="item" title="物品卡片"><span
               class="material-symbols-rounded">shield</span><span class="toolbar-label">物品卡</span></button>
-          class="material-symbols-rounded">casino</span><span class="toolbar-label">骰子</span></button>
+          <button class="toolbar-btn" data-action="dice-inline" title="行内骰子"><span
+              class="material-symbols-rounded">casino</span><span class="toolbar-label">骰子</span></button>
           <button class="toolbar-btn" data-action="blockquote" title="引用块"><span
               class="material-symbols-rounded">format_quote</span><span class="toolbar-label">引用</span></button>
         </div>
