feat: Initialize core application with editor, file management, preferences, and add a generic block toolbar button.

--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
               class="material-symbols-rounded">sticky_note_2</span><span class="toolbar-label">提示框</span></button>
           <button class="toolbar-btn" data-action="warning" title="警告框"><span
               class="material-symbols-rounded">warning</span><span class="toolbar-label">警告框</span></button>
+          <button class="toolbar-btn" data-action="generic-block" title="通用描述块（无框）"><span
+              class="material-symbols-rounded">article</span><span class="toolbar-label">通用块</span></button>
           <button class="toolbar-btn" data-action="stat-block" title="怪物属性块(D&D)"><span
               class="material-symbols-rounded">pets</span><span class="toolbar-label">属性块</span></button>
           <button class="toolbar-btn" data-action="coc-stat" title="怪物属性块(COC)"><span
