feat: Add explanatory text about the TRPG tool's purpose and well wishes to the about section.

--- a/index.html
+++ b/index.html
@@ -325,6 +325,11 @@
           <div class="about-info">不咕鸟TRPG创想俱乐部：261751459</div>
           <div class="about-info">成都秘密基地约团站：<a href="http://118.89.179.143/schedule" target="_blank"
               style="color:var(--accent);">http://118.89.179.143/schedule</a></div>
+          <div style="margin-top: 15px; font-size: 0.9em; color: var(--text-muted); line-height: 1.6;">
+            本工具旨在让想要进行TRPG创作的朋友不再为基础的排版和美术犯愁，但并不能完全替代专业的写作与排版软件。<br>
+            TRPG在剧本内容与主持技巧上皆是进无止境的，希望每一位同好都能享受跑团带来的各种快乐。<br>
+            同时祝大家：跑团顺利，不鸽也不被鸽~ 🎲
+          </div>
         </div>
       </div>
     </div>
@@ -416,6 +421,12 @@
           <div class="about-info" style="margin-bottom: 8px;">不咕鸟TRPG创想俱乐部：261751459</div>
           <div class="about-info" style="margin-bottom: 8px;">成都秘密基地约团站：<a href="http://118.89.179.143/schedule"
               target="_blank" style="color:var(--accent);">http://118.89.179.143/schedule</a></div>
+          <div
+            style="margin-top: 20px; font-size: 0.9em; color: var(--text-muted); text-align: left; line-height: 1.6; padding: 15px; background: var(--bg-surface); border-radius: var(--radius); border: 1px dashed var(--border);">
+            本工具旨在让想要进行TRPG创作的朋友不再为基础的排版和美术犯愁，但并不能完全替代专业的写作与排版软件。<br><br>
+            TRPG在剧本内容与主持技巧上皆是进无止境的，希望每一位同好都能享受跑团带来的各种快乐。<br><br>
+            <strong style="color:var(--accent);">祝大家：跑团顺利，不鸽也不被鸽~ 🎲</strong>
+          </div>
         </div>
       </div>
     </div>
