--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <button class="icon-btn" id="btn-export-html" title="导出HTML">
           <span class="material-symbols-rounded">code</span>
         </button>
+        <button class="icon-btn" id="btn-export-md" title="导出Markdown">
+          <span class="material-symbols-rounded">description</span>
+        </button>
         <button class="icon-btn" id="btn-settings" title="设置">
           <span class="material-symbols-rounded">settings</span>
         </button>
